--- a/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
+++ b/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
@@ -48,6 +48,7 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../js/UtilitiesCpanel.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder id="script" runat="server">
     </asp:ContentPlaceHolder>
     </form>
