--- a/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
+++ b/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
@@ -29,7 +29,10 @@
         {
             margin: 4px 4px 4px 4px;    
         }
-
+        table label
+        {
+            font-size:12px;
+        }
     </style>
 </head>
 <body>
