--- a/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
+++ b/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
@@ -33,6 +33,10 @@
         {
             font-size:12px;
         }
+        table input
+        {
+            min-height:21px
+        }
     </style>
 </head>
 <body>
