--- a/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
+++ b/yeuthietkeweb.cms _new/yeuthietkeweb.cms/master/Site.Master
@@ -33,7 +33,7 @@
         {
             font-size:12px;
         }
-        table input[type="text"]
+        table input
         {
             min-height:21px
         }
